# Back_ProgWeb

./: database.py  dev.db  main.py  pyproject.toml  security.py
app/auth/: auth_service.py
app/posts/: posts_controller.py  posts_model.py  posts_repository.py  posts_service.py
app/roles/: role_controller.py
app/users/: user_controller.py  user_model.py  user_schemas.py  user_service.py
app/utils/: image_processor.py
auth/: auth_controller.py  auth_service.py
role/: role_controller.py  role_model.py  role_repository.py  role_service.py
scripts/: create_test_user.py  seed_roles.py  test_auth_flow.py  test_post_user.py
user/: user_controller.py  user_model.py  user_repository.py  user_service.py
